setting and add mypy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.group.lint.dependencies]
 flake8 = "^7.1.2"
 black = "^25.1.0"
+mypy = "^1.15.0"
 
 
 [tool.black]
@@ -39,3 +40,7 @@ exclude = '''
                      # в корне проекта
 )
 '''
+
+[tool.mypy]
+disallow_untyped_defs = true
+warn_return_any = true
